# TeleBotAPILLM

./: .env.example  .gitignore  Dockerfile  README.md  api-lllm.py  api_llm.py  api_video.py  apideepseek.py  bot.py  compose.yaml  config.py  pyproject.toml  repomix-output.xml  requirements.txt  update_cookies.py
scripts/: update_cookies.py
src/botgram_py/: config.py  custom_filters.py  main.py
src/botgram_py/handlers/: ai.py  audio.py  translate.py  video.py
src/botgram_py/services/: llm_api.py  speech_to_text.py  video_api.py
src/telegram_bot/: config.py  custom_filters.py  main.py
src/telegram_bot/handlers/: ai.py  audio.py  general.py  helper.py  translate.py  video.py
src/telegram_bot/services/: llm_api.py  speech_to_text.py  video_api.py
